<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="@dimen/padding_pantalla"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:background="@drawable/fondo"



    tools:context="marc.com.primera.tresenratlla.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            style="@style/titulo"
            android:layout_width="match_parent"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/unjug"
            style="@style/boton"
            android:layout_width="match_parent"
            android:text="@string/un_jugador" />

        <RadioGroup
            android:id="@+id/configD"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/facil"
                style="@style/radio"
                android:text="@string/facil" />

            <RadioButton
                android:id="@+id/normal"
                style="@style/radio"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/imposible"
                style="@style/radio"
                android:text="@string/imposible" />

        </RadioGroup>

        <Button
            android:id="@+id/dosjug"
            style="@style/boton"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/dos_jugadores" />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/a1"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/a2"
            android:src="@drawable/circulo"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/aspa"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/b2"
            android:src="@drawable/aspa"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/b3"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/c1"
            android:src="@drawable/circulo"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/c2"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"/>


    </GridLayout>

</LinearLayout>

